cf-demo.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Enterprise VPC with ALB, WAF, VPN, Windows App, SQL, Syslog and NAT (EU-West-1) (ireland)

Resources:

# ================= VPC =================
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Enterprise-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

# ================= SUBNETS =================
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24

# ================= ROUTES =================
  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRT

  PublicSubnetAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRT

# ================= NAT GATEWAY =================
  NATEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATEIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: NATGateway
    Properties:
      RouteTableId: !Ref PrivateRT
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRT

# ================= SECURITY GROUPS =================
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  VPNSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPN SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  AppSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: App and SQL SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          SourceSecurityGroupId: !Ref VPNSG

  SyslogSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Syslog SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/16
        - IpProtocol: udp
          FromPort: 514
          ToPort: 514
          CidrIp: 10.0.0.0/16

# ================= S3 FOR ALB LOGS =================
  ALBLogsBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub alb-access-logs-${AWS::AccountId}

  ALBLogsBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref ALBLogsBucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: AllowALBWrite
            Effect: Allow
            Principal:
              AWS: "arn:aws:iam::156460612806:root"
            Action:
              - s3:PutObject
            Resource: !Sub "arn:aws:s3:::alb-access-logs-${AWS::AccountId}/*"

# ================= ALB =================
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: enterprise-alb
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSG
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Ref ALBLogsBucket

# ================= WAF =================
  WebACL:
    Type: AWS::WAFv2::WebACL
    Properties:
      Name: Enterprise-WAF
      Scope: REGIONAL
      DefaultAction:
        Allow: {}
      VisibilityConfig:
        CloudWatchMetricsEnabled: true
        MetricName: waf
        SampledRequestsEnabled: true
      Rules: []

  WebACLAssociation:
    Type: AWS::WAFv2::WebACLAssociation
    Properties:
      ResourceArn: !Ref ALB
      WebACLArn: !GetAtt WebACL.Arn

# ================= EC2 INSTANCES =================
  AppServer:                      #windows server ami
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02c17bdcfee8b6c17
      InstanceType: t3.medium
      KeyName: key-name
      SubnetId: !Ref PrivateSubnet
      SecurityGroupIds:
        - !Ref AppSG

  SQLServer:                    #windows server ami
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02c17bdcfee8b6c17
      InstanceType: t3.large
      KeyName: key-name
      SubnetId: !Ref PrivateSubnet
      SecurityGroupIds:
        - !Ref AppSG

  SyslogServer:                #Linux server ami
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-080ecf65f4d838a6e
      InstanceType: t3.small
      KeyName: key-name
      SubnetId: !Ref PrivateSubnet
      SecurityGroupIds:
        - !Ref SyslogSG

  VPNServer:                #Openvpn server aws marketplace
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-009c7b65f138c86fa
      InstanceType: t3.small
      KeyName: key-name
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref VPNSG
